fixed login form spacing

--- a/client/views/login-form/_login-form.sass
+++ b/client/views/login-form/_login-form.sass
@@ -12,7 +12,7 @@
   flex-direction: column
 
 .login-form-input-field-container
-  margin: 3px 5px 3px 0
+  margin: 3px 5px 3px 0 !important
 
 .login-error-message
   color: red
